--- a/client/index.html
+++ b/client/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chat Program</title>
+    <title>Chatting</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div id="username-container">
-        <input type="text" id="username-input" placeholder="Benutzername eingeben" />
-        <button id="username-submit">Beitreten</button>
+    <div id="username-container" class="username-container">
+        <input type="text" id="username-input" class="username-input" placeholder="Neuer Username eingeben"/>
+        <button id="username-submit" class="username-submit">Beitreten</button>
     </div>
     
-    <h1>Live Chat</h1>
-    <div id="chat-container">
-        <ul id="chat-messages"></ul>
-        <form id="chat-form">
-            <input type="text" id="message-input" placeholder="Schreibe eine Nachricht..." />
-            <button type="submit">Senden</button>
+    <h1 class="chat-title">Chat</h1>
+    <div id="chat-container" class="chat-container">
+        <ul id="chat-messages" class="chat-messages"></ul>
+        <form id="chat-form" class="chat-form">
+            <input type="text" id="message-input" class="message-input" placeholder="Schreibe eine Nachricht..." />
+            <button type="submit" class="send-button">Senden</button>
         </form>
     </div>
     <script src="/script.js"></script>
