--- a/client/index.html
+++ b/client/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <div id="username-container" class="username-container">
-        <input type="text" id="username-input" class="username-input" placeholder="Neuer Username eingeben"/>
+        <input type="text" id="username-input" class="username-input" placeholder="Neuer Name eingeben ..."/>
         <button id="username-submit" class="username-submit">Beitreten</button>
     </div>
     
-    <h1 class="chat-title">Chat</h1>
+    <h1 class="chat-title">Chat ID: 146352</h1>
     <div id="chat-container" class="chat-container">
         <ul id="chat-messages" class="chat-messages"></ul>
         <form id="chat-form" class="chat-form">
-            <input type="text" id="message-input" class="message-input" placeholder="Schreibe eine Nachricht..." />
+            <input type="text" id="message-input" class="message-input" placeholder="Neue Nachricht eingeben ..." />
             <button type="submit" class="send-button">Senden</button>
         </form>
     </div>
