--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html> <!--Original-->
-
-<html lang="en"> <!--Original-->
-
-<head> <!--Original-->
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +8,6 @@
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
-
 <body> 
     <div>
         <h3>Client</h3>
